--- a/main/templates/main/package_detail.html
+++ b/main/templates/main/package_detail.html
@@ -13,7 +13,22 @@
                 <p>{{ package.description }}</p>
                 
                 <h2>Itinerary</h2>
-                <p style="white-space: pre-wrap;">{{ package.itinerary }}</p>
+                <div class="accordion" id="itineraryAccordion">
+                    {% for day in package.itinerary %}
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="heading{{ forloop.counter }}">
+                                <button class="accordion-button {% if not forloop.first %}collapsed{% endif %}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ forloop.counter }}" aria-expanded="true" aria-controls="collapse{{ forloop.counter }}">
+                                    <strong>Day {{ day.day }}: {{ day.title }}</strong>
+                                </button>
+                            </h2>
+                            <div id="collapse{{ forloop.counter }}" class="accordion-collapse collapse {% if forloop.first %}show{% endif %}" aria-labelledby="heading{{ forloop.counter }}" data-bs-parent="#itineraryAccordion">
+                                <div class="accordion-body">
+                                    {{ day.description }}
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
 
                 <hr class="my-4">
 
