--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -25,6 +25,9 @@
                             <a class="nav-link" href="{% url 'my_bookings' %}">My Bookings</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                        </li>
+                        <li class="nav-item">
                             <form method="post" action="{% url 'logout' %}">
                                 {% csrf_token %}
                                 <button type="submit" class="nav-link btn btn-link">Logout</button>
