--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -49,7 +49,10 @@
                     <div class="d-flex">
                         {% if user.is_authenticated %}
                             <a href="{% url 'my_bookings' %}" class="btn btn-outline-primary me-2">My Bookings</a>
-                            <a href="{% url 'logout' %}" class="btn btn-primary">Logout</a>
+                            <form action="{% url 'logout' %}" method="post" class="d-inline">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-primary">Logout</button>
+                            </form>
                         {% else %}
                             <a href="{% url 'login' %}" class="btn btn-outline-primary me-2">Login</a>
                             <a href="{% url 'register' %}" class="btn btn-primary">Register</a>
