--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -6,22 +7,7 @@
     <title>Travel Booker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <style>
-        .navbar-custom {
-            background-color: #9CAF88; /* Sage Green */
-        }
-        .navbar-custom .navbar-brand,
-        .navbar-custom .nav-link {
-            color: #343a40; /* Dark Gray for contrast */
-        }
-        .navbar-custom .nav-link.active,
-        .navbar-custom .nav-link:hover {
-            color: #000; /* Black for active/hover state */
-        }
-        .navbar-custom .navbar-toggler-icon {
-            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%2852, 58, 64, 0.75%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'css/custom.css' %}">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-custom shadow-sm">
