--- a/main/templates/main/vendor_dashboard.html
+++ b/main/templates/main/vendor_dashboard.html
@@ -1,4 +1,4 @@
-{% extends "main/base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
