--- a/main/templates/main/create_package.html
+++ b/main/templates/main/create_package.html
@@ -1,12 +1,63 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Create New Travel Package</h1>
+<div class="container mt-4">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="mb-0">Create New Travel Package</h2>
+                </div>
+                <div class="card-body">
+                    <form method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        
+                        <!-- Package Details -->
+                        <fieldset class="mb-4 p-3 border rounded">
+                            <legend class="float-none w-auto px-2 fs-5">Package Details</legend>
+                            <div class="mb-3">
+                                <label for="{{ form.name.id_for_label }}" class="form-label">Package Name</label>
+                                {{ form.name }}
+                            </div>
+                            <div class="mb-3">
+                                <label for="{{ form.description.id_for_label }}" class="form-label">Description</label>
+                                {{ form.description }}
+                            </div>
+                            <div class="mb-3">
+                                <label for="{{ form.location.id_for_label }}" class="form-label">Location</label>
+                                {{ form.location }}
+                            </div>
+                            <div class="mb-3">
+                                <label for="{{ form.hotel_info.id_for_label }}" class="form-label">Hotel Information</label>
+                                {{ form.hotel_info }}
+                            </div>
+                            <div class="mb-3">
+                                <label for="{{ form.travel_type.id_for_label }}" class="form-label">Type of Travel</label>
+                                {{ form.travel_type }}
+                            </div>
+                            <div class="mb-3">
+                                <label for="{{ form.price.id_for_label }}" class="form-label">Price</label>
+                                {{ form.price }}
+                            </div>
+                            <div class="mb-3">
+                                <label for="{{ form.start_date.id_for_label }}" class="form-label">Start Date</label>
+                                {{ form.start_date }}
+                            </div>
+                            <div class="mb-3">
+                                <label for="{{ form.end_date.id_for_label }}" class="form-label">End Date</label>
+                                {{ form.end_date }}
+                            </div>
+                        </fieldset>
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Create Package</button>
-    <a href="{% url 'vendor_dashboard' %}" class="btn btn-secondary">Cancel</a>
-</form>
+                        <!-- Itinerary Formset (if you want to add it here later) -->
+                        <!-- Images Formset (if you want to add it here later) -->
+
+                        <button type="submit" class="btn btn-primary">Create Package</button>
+                        <a href="{% url 'vendor_dashboard' %}" class="btn btn-secondary">Cancel</a>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
